EmployeeManageProject/force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>社員</label>
    <nameField>
        <label>社員名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>社員</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>