EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>社員コード</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>