EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/FanNickname__c.field-meta.xml
<CustomField>
    <fullName>FanNickname__c</fullName>
    <label>ファンの愛称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>