EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>所属グループ</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>社員</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>