EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/HireDate__c.field-meta.xml
<CustomField>
    <fullName>HireDate__c</fullName>
    <label>入社日</label>
    <type>Date</type>
</CustomField>