EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE( ImageURL__c , &apos;本人の写真&apos; ,100, 100)</formula>
    <label>写真</label>
    <type>Text</type>
</CustomField>