EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>画像URL</label>
    <type>Url</type>
</CustomField>