EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/Kana__c.field-meta.xml
<CustomField>
    <fullName>Kana__c</fullName>
    <label>かな</label>
    <length>255</length>
    <type>Text</type>
</CustomField>