EmployeeManageProject/force-app/main/default/objects/Employee__c/fields/RetirementDate__c.field-meta.xml
<CustomField>
    <fullName>RetirementDate__c</fullName>
    <label>退社日</label>
    <type>Date</type>
</CustomField>