EmployeeManageProject/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Kana__c</columns>
    <columns>Image__c</columns>
    <columns>Group__c</columns>
    <columns>HireDate__c</columns>
    <columns>RetirementDate__c</columns>
    <columns>Twitter__c</columns>
    <columns>FanNickname__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>